# TinyG

firmware/tinyg/: CMakeLists.txt  canonical_machine.c  controller.c  hardware.c  hardware.h  json_parser.c  settings.h  switch.c  switch.h  tinyg.hex  xio.c  xio.h
